<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.RegisterActivity">

    <LinearLayout
        android:id="@+id/register_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="5dp"
        android:padding="5dp"
        app:layout_constraintBottom_toTopOf="@id/register_form_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/TextHeader"
            android:text="Bienvenido, este registro lo realizarás una vez solamente.Guarda cuidadosamente tu usuario y contraseña ya que no podrás recuperarlos después."
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/register_form_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="15dp"
        app:layout_constraintTop_toBottomOf="@id/register_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                style="@style/EditText"
                android:background="@drawable/edit_text_background"
                android:hint="@string/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                style="@style/EditText"
                android:background="@drawable/edit_text_background"
                android:hint="@string/last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                style="@style/EditText"
                android:background="@drawable/edit_text_background"
                android:hint="@string/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                style="@style/EditText"
                android:background="@drawable/edit_text_background"
                android:hint="@string/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                style="@style/CancelButtonStyle"
                android:layout_margin="5dp"
                android:text="@string/cancel"
                android:layout_marginTop="15dp"
                android:layout_gravity="center"
                android:layout_width="0dp"
                android:layout_weight="30"
                android:layout_height="wrap_content"/>

            <com.google.android.material.button.MaterialButton
                style="@style/ButtonStyle"
                android:layout_margin="5dp"
                android:text="@string/registrar"
                android:layout_marginTop="15dp"
                android:layout_gravity="center"
                android:layout_width="0dp"
                android:layout_weight="30"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>