<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:orientation="vertical"
        android:layout_margin="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:padding="@dimen/padding_input"
            android:hint="@string/name"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_student_name"
                style="@style/EditText"
                android:background="@drawable/edit_text_background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:padding="@dimen/padding_input"
                android:hint="@string/last_name"
                style="@style/EditText"
                android:layout_width="0dp"
                android:layout_weight="50"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_student_last_name"
                    style="@style/EditText"
                    android:background="@drawable/edit_text_background"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:padding="@dimen/padding_input"
                android:hint="@string/surname"
                style="@style/EditText"
                android:layout_width="0dp"
                android:layout_weight="50"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_student_surname"
                    style="@style/EditText"
                    android:background="@drawable/edit_text_background"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:padding="@dimen/padding_input"
            android:hint="@string/birthday"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_student_birthday"
                style="@style/EditText"
                android:inputType="date"
                android:focusable="false"
                android:clickable="true"
                android:maxLines="1"
                android:background="@drawable/edit_text_background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:padding="@dimen/padding_input"
            android:hint="@string/contact"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_student_contact"
                style="@style/EditText"
                android:inputType="number"
                android:background="@drawable/edit_text_background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>