<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:name="com.carlos.cc.gesact.fragments.CriterionsFragment"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.CriterionsFragment">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_margin="5dp"
        android:background="@color/gray"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:padding="@dimen/padding_input"
            style="@style/EditText"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txt_search_criterions"
                style="@style/EditText"
                android:hint="@string/search"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:id="@+id/btn_search_criterion"
            android:background="@drawable/image_button_background"
            android:src="@drawable/ic_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <TextView
        android:id="@+id/txt_clean_search"
        android:visibility="gone"
        android:layout_marginStart="@dimen/text_margin"
        style="@style/LinkText"
        android:text="@string/clear_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:background="@drawable/spinner_background"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="5dp"
        android:padding="2dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/group"
            style="@style/LinkText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Spinner
            android:id="@+id/spinner_groups"
            android:spinnerMode="dropdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:background="@drawable/spinner_background"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="5dp"
        android:padding="2dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/subject"
            style="@style/LinkText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Spinner
            android:id="@+id/spinner_subjects"
            android:spinnerMode="dropdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btn_add_criterions"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="25dp"
            android:layout_marginEnd="10dp"
            android:drawableLeft="@drawable/ic_add"
            android:text="@string/add"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_criterions"
            android:name="com.carlos.cc.gesact.fragments.CriterionFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/element_list_margin"
            android:layout_marginRight="@dimen/element_list_margin"
            app:layoutManager="LinearLayoutManager"
            tools:context=".fragments.CriterionsFragment"
            tools:listitem="@layout/fragment_criterions"/>
    </RelativeLayout>
</LinearLayout>