<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:orientation="vertical"
        android:layout_margin="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:padding="@dimen/padding_input"
            android:hint="@string/name"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_criterion_name"
                style="@style/EditText"
                android:background="@drawable/edit_text_background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:padding="@dimen/padding_input"
            android:hint="@string/percent_value"
            style="@style/EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_criterion_value"
                style="@style/EditText"
                android:inputType="number"
                android:background="@drawable/edit_text_background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:textColor="@color/black"
                android:text="Representa el valor que este criterio tendrá dentro de la calificación final si se tienen todas las evidencias de este tipo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

       <LinearLayout
           android:orientation="horizontal"
           android:gravity="center_vertical"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">

           <RadioGroup
               android:orientation="horizontal"
               android:layout_width="0dp"
               android:layout_weight="80"
               android:layout_height="wrap_content">

               <RadioButton
                   android:id="@+id/radio_simple"
                   android:text="Calificación simple"
                   android:textColor="@color/black"
                   android:checked="true"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"/>
               <RadioButton
                   android:id="@+id/radio_calculado"
                   android:text="Calificación calculada"
                   android:textColor="@color/black"
                   android:checked="false"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"/>

           </RadioGroup>

           <ImageView
               android:id="@+id/img_info"
               android:src="@drawable/ic_help"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"/>

       </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_range_values"
            android:visibility="gone"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:padding="@dimen/padding_input"
                android:hint="@string/min_value"
                style="@style/EditText"
                android:layout_width="0dp"
                android:layout_weight="50"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_criterion_min_value"
                    style="@style/EditText"
                    android:inputType="number"
                    android:background="@drawable/edit_text_background"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:padding="@dimen/padding_input"
                android:hint="@string/max_value"
                style="@style/EditText"
                android:layout_width="0dp"
                android:layout_weight="50"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_criterion_max_value"
                    style="@style/EditText"
                    android:inputType="number"
                    android:background="@drawable/edit_text_background"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>